evals/aloepri-attacks/results/sweep/ablation-stage-3-partial-alg2/run.log
Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.
[M2.7 quality+humaneval] endpoint=http://127.0.0.1:8061
[M2.7 quality+humaneval] key=/home/timo/.cache/huggingface/path-2-aloepri/qwen3-1.7b/keymat-h128-pi-noise-alg2-fp32.gguf.key.npz
[M2.7 quality+humaneval] quality probe (5 prompts)…
  q[0] readable=True (ok) [ 48 tok, 1.8 s] 'The capital of France is' → ' in Paris, and the population of France is 64,000,000. How m'
  q[1] readable=True (ok) [ 48 tok, 1.8 s] 'Q: What is 17 times 4? A:' → ' 1) 68 2) 64 3) 60 4) 62 5) 66 6) 64 7) 68 8) 64'
  q[2] readable=True (ok) [ 48 tok, 1.8 s] 'Write a haiku about autumn leaves:' → " 17 syllables, 5 lines, 10-14 words each line.\n\nHere's a hai"
  q[3] readable=True (ok) [ 48 tok, 1.8 s] 'def is_prime(n):' → '\n    if n <=2:\n        return False\n    else:\n        for i '
  q[4] readable=True (ok) [ 48 tok, 1.8 s] "Translate to French: 'Good morning, how " → " 'Bonjour, comment allez-vous ?' \n\nBut, in French, 'Bonjour'"
  → all_readable=True (9.0 s)
[M2.7 quality+humaneval] HumanEval pass@1 (n=20)…
  he[ 0/20] HumanEval/163    fail (384 tok, 14.3 s) Traceback (most recent call last):
  File "/tmp/tmp8de8y2tl.py", line 219, in <m
  he[ 1/20] HumanEval/28 ERROR: HTTPError('500 Server Error: Internal Server Error for url: http://127.0.0.1:8061/completion')
  he[ 2/20] HumanEval/6      fail (384 tok, 14.2 s) Traceback (most recent call last):
  File "/tmp/tmpsx1i15v_.py", line 112, in <m
  he[ 3/20] HumanEval/70     fail (384 tok, 14.2 s) Traceback (most recent call last):
  File "/tmp/tmpl5fyevxa.py", line 61, in <mo
  he[ 4/20] HumanEval/62     fail (384 tok, 14.2 s)   File "/tmp/tmpwyb65w3y.py", line 16
    """
    ^
SyntaxError: unterminated tr
  he[ 5/20] HumanEval/57     fail (384 tok, 14.4 s) Traceback (most recent call last):
  File "/tmp/tmpq8td90pi.py", line 69, in <mo
  he[ 6/20] HumanEval/35     fail (384 tok, 14.4 s) Traceback (most recent call last):
  File "/tmp/tmp0bw03l22.py", line 23, in <mo
  he[ 7/20] HumanEval/26     fail (384 tok, 14.4 s) Traceback (most recent call last):
  File "/tmp/tmpn3u_si7z.py", line 61, in <mo
  he[ 8/20] HumanEval/139    fail (384 tok, 14.4 s) Traceback (most recent call last):
  File "/tmp/tmpb10y84kd.py", line 124, in <m
  he[ 9/20] HumanEval/22 ERROR: HTTPError('500 Server Error: Internal Server Error for url: http://127.0.0.1:8061/completion')
  he[10/20] HumanEval/151    fail (384 tok, 14.4 s) Traceback (most recent call last):
  File "/tmp/tmpkyfkzijo.py", line 290, in <m
  he[11/20] HumanEval/108    fail (384 tok, 14.5 s) Traceback (most recent call last):
  File "/tmp/tmprn7tpth_.py", line 127, in <m
  he[12/20] HumanEval/8 ERROR: HTTPError('500 Server Error: Internal Server Error for url: http://127.0.0.1:8061/completion')
  he[13/20] HumanEval/7      fail (384 tok, 14.3 s)   File "/tmp/tmpiuurrgpk.py", line 18
    Wait, but in Python, the in operator i
  he[14/20] HumanEval/23     PASS (384 tok, 14.3 s) 
  he[15/20] HumanEval/55     fail (384 tok, 14.3 s)   File "/tmp/tmpzoqefc61.py", line 25
    Wait, but in the code, the fib(10) is 
  he[16/20] HumanEval/59     fail (384 tok, 14.2 s) Traceback (most recent call last):
  File "/tmp/tmpwf19ib8w.py", line 27, in <mo
  he[17/20] HumanEval/129    fail (384 tok, 14.3 s) Traceback (most recent call last):
  File "/tmp/tmpptc13130.py", line 246, in <m
  he[18/20] HumanEval/161    fail (384 tok, 14.6 s) Traceback (most recent call last):
  File "/tmp/tmpshx5e20o.py", line 224, in <m
  he[19/20] HumanEval/143    fail (384 tok, 14.2 s) Traceback (most recent call last):
  File "/tmp/tmp7j_9egbx.py", line 231, in <m
  → pass@1 = 1/20 = 0.050 (287 s)
[M2.7 quality+humaneval] wrote evals/aloepri-attacks/results/sweep/ablation-stage-3-partial-alg2/quality-humaneval.json
